# vm_connection

./: CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  test_connection.py
src/vm_connection/: __init__.py  ssh_connection.py
tests/: __init__.py  conftest.py  stream_test.sh  test_connection.py  test_ssh_connection.py
tests/vm/: long_test.sh  test_connection.py  test_is_alive.py  test_long_command.py  test_reboot.py  test_reconnect.py  test_streaming.py
vm_connection/: __init__.py  connection.py  exceptions.py  health.py  reboot.py  stream.py
